--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,18 @@
   width: 150px;
 }
 
+.button__details--White {
+  background: green;
+  border: solid 2px darkgoldenrod;
+  color: white;
+  font-size: 50px;
+  height: 150px;
+  margin: -2px;
+  padding: 4px;
+  vertical-align: middle;
+  width: 150px;
+}
+
 .button__light--green {
   background: lightgreen;
 }
@@ -17,6 +29,10 @@
   height: 850px;
   margin: 20px 20% 20px 20%;
   width: 700px;
+}
+
+#colorClick {
+  background-color: lightblue;
 }
 
 .div__section {
