--- a/styles/main.css
+++ b/styles/main.css
@@ -51,13 +51,14 @@
   font-size: 50px;
   color: white;
   height: 132px;
-  line-height: 150px;
+  line-height: 45px;
   margin-left: -2px;
   margin-bottom: -2px;
   overflow: hidden;
   padding: 8px;
   text-align: right;
   vertical-align: bottom;
+  word-wrap:break-word;
   width: 431px;
 }
 
